# 0xide

./: .envrc  .gitignore  0xide.conf.example  0xide.test.conf  Cargo.toml  KICKOFF.md  README.md  book.toml  build.rs  snertwl.conf.example  wrapper.h
.cargo/: config.toml
.github/workflows/: deploy-book.yml
docs/: SUMMARY.md  architecture.md  design.md  environment.md  introduction.md  running.md
docs/phases/: README.md  stage-0-foundation.md  stage-1-wayland-server.md  stage-10-split-tree.md  stage-11-runtime-control.md  stage-2-outputs-render.md  stage-3-first-window.md  stage-4-input.md  stage-5-window-management.md  stage-6-real-display.md  stage-7-boot-vm.md  stage-8-polish.md  stage-9-floating.md
notes/: MEMORY.md  architecture.md  env-and-toolchain.md  running-and-verifying.md  signals-and-spawning.md
shim/: core.c  decoration.c  input.c  layer_shell.c  output.c  oxide_shim.c  oxide_shim.h  oxide_shim_internal.h  snertwl_shim.c  snertwl_shim.h  xdg_shell.c
src/: config.rs  decoration.rs  ffi.rs  input.rs  keybindings.rs  layer_shell.rs  layout.rs  main.rs  output.rs  state.rs  tiling.rs  toplevel.rs
