[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
description = "0xide — a from-scratch tiling Wayland compositor in Rust, built on wlroots"

# The crate is `oxide` (Cargo forbids a leading digit in package names), but the
# binary keeps the brand spelling `0xide`.
[[bin]]
name = "0xide"
path = "src/main.rs"

[dependencies]

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"
